Fix header menu system font size misalignment

--- a/components/src/core/drawer/drawer-header/drawer-header.component.scss
+++ b/components/src/core/drawer/drawer-header/drawer-header.component.scss
@@ -3,7 +3,7 @@
 /* RTL */
 [dir='rtl'] .pxb-drawer-header-content {
     .pxb-drawer-header-icon-wrapper {
-        margin-right: 0;
+        margin-right: -0.5rem;
         margin-left: 16px;
     }
     &.pxb-drawer-header-no-icon .pxb-drawer-header-icon-wrapper {
@@ -22,10 +22,6 @@
     height: 4rem;
 
     &.mat-toolbar-single-row.mat-toolbar {
-        padding-right: 8px;
-        padding-left: 8px;
-    }
-    &.rail.mat-toolbar-single-row.mat-toolbar {
         padding-right: 16px;
         padding-left: 16px;
     }
@@ -58,6 +54,7 @@
         align-items: center;
         z-index: 1;
         margin-right: 16px;
+        margin-left: -0.5rem;
         width: 2.5rem;
         @include scale-icon-button();
     }
